# NewEngine

neocore2/: Cargo.toml  config.json  startup.json
neocore2/app/: Cargo.toml  engine.toml
neocore2/app/src/: main.rs
neocore2/apps/editor/: Cargo.toml
neocore2/apps/editor/src/: main.rs  render_controller.rs  ui.rs
neocore2/assets/textures/: dd_gaviota_01.dds
neocore2/crates/newengine-AssetManager/: Cargo.toml
neocore2/crates/newengine-AssetManager/src/: id.rs  importers.rs  lib.rs  model3d.rs  store.rs  types.rs
neocore2/crates/newengine-assets/: Cargo.toml
neocore2/crates/newengine-assets/src/: events.rs  id.rs  importers.rs  lib.rs  source.rs  store.rs  types.rs
neocore2/crates/newengine-camera/src/: types.rs
neocore2/crates/newengine-core/: Cargo.toml  core_invariants.md
neocore2/crates/newengine-core/src/: assets.rs  bus.rs  core_invariants.rs  engine.rs  error.rs  events.rs  host_events.rs  lib.rs  mod.rs  plugins.rs  startup_config.rs  startup_loader.rs  system_info.rs
neocore2/crates/newengine-core/src/console/: types.rs
neocore2/crates/newengine-core/src/module/: ctx.rs  mod.rs  module.rs  resources.rs
neocore2/crates/newengine-core/src/plugins/: host_api.rs  host_context.rs  host_event_bridge.rs  manager.rs  mod.rs  runtime.rs  service_registry.rs
neocore2/crates/newengine-core/src/render/: mod.rs
neocore2/crates/newengine-core/src/sched/: mod.rs  sched.rs
neocore2/crates/newengine-core/src/startup/: config.rs  loader.rs  mod.rs
neocore2/crates/newengine-core/src/sync/: sync.rs
neocore2/crates/newengine-import-audio/: Cargo.toml  build.rs
neocore2/crates/newengine-import-audio/src/: lib.rs  module.rs  plugin.rs
neocore2/crates/newengine-import-dds/: Cargo.toml  build.rs
neocore2/crates/newengine-import-dds/src/: lib.rs  module.rs  plugin.rs
neocore2/crates/newengine-import-image/: Cargo.toml  build.rs
neocore2/crates/newengine-import-image/src/: plugin.rs
neocore2/crates/newengine-import-image/src/providers/: gif.rs  mod.rs  png.rs  webp.rs
neocore2/crates/newengine-import-png/: Cargo.toml
neocore2/crates/newengine-import-png/src/: module.rs
neocore2/crates/newengine-import-text/: Cargo.toml
neocore2/crates/newengine-import-text/src/: module.rs
neocore2/crates/newengine-import-text/src/providers/: glsl.rs  hlsl.rs  html.rs  json.rs  mod.rs  ron.rs  shader_stage.rs  txt.rs  wgsl.rs  xml.rs  yaml.rs
neocore2/crates/newengine-modules-audio-null/: Cargo.toml
neocore2/crates/newengine-modules-audio-null/src/: lib.rs  module.rs  service.rs
neocore2/crates/newengine-modules-cef/: Cargo.toml
neocore2/crates/newengine-modules-cef/src/: content.rs  lib.rs  runtime.rs
neocore2/crates/newengine-modules-input/: Cargo.toml
neocore2/crates/newengine-modules-input/src/: api.rs  lib.rs  module.rs  plugins.rs  state.rs
neocore2/crates/newengine-modules-logging/src/: lib.rs
neocore2/crates/newengine-modules-render-vulkan-ash/: Cargo.toml  build.rs
neocore2/crates/newengine-modules-render-vulkan-ash/shaders/: text.frag  tri.frag  tri.vert
neocore2/crates/newengine-modules-render-vulkan-ash/src/: api.rs  lib.rs  render_api.rs  vulkan.rs
neocore2/crates/newengine-modules-render-vulkan-ash/src/error/: mod.rs
neocore2/crates/newengine-modules-render-vulkan-ash/src/vulkan/: mod.rs  pipeline.rs  renderer.rs  swapchain.rs  text.rs  util.rs
neocore2/crates/newengine-platform-winit/: Cargo.toml
neocore2/crates/newengine-platform-winit/src/: app.rs  events.rs  lib.rs
neocore2/crates/newengine-platform-winit/src/app/: config.rs  handler.rs  mod.rs
neocore2/crates/newengine-plugin-api/src/: lib.rs
neocore2/crates/newengine-ui/: Cargo.toml
neocore2/crates/newengine-ui/src/: lib.rs  markup.rs  provider.rs
neocore2/crates/newengine-ui/src/markup/: actions.rs  doc.rs  error.rs  parser.rs  substitute.rs  theme.rs  ui_node.rs
neocore2/crates/newengine-ui/src/providers/: egui.rs  mod.rs  null.rs
neocore2/engine_core/: Cargo.toml
neocore2/engine_core/src/: config.rs  engine.rs  frame.rs  lib.rs  log.rs  module.rs  phase.rs  schedule.rs  signals.rs  telemetry.rs  time.rs
neocore2/old/: config.json
neocore2/old/apps/editor/: Cargo.toml
neocore2/old/apps/editor/src/: main.rs
neocore2/old/assets/text/: hello.txt  test.json
neocore2/old/assets/ui/: editor.ui.xml  editor.xml
neocore2/old/crates/newengine-AssetManager/: Cargo.toml
neocore2/old/crates/newengine-AssetManager/src/: audio.rs  events.rs  lib.rs  source.rs  store.rs  text_reader.rs  texture.rs  types.rs
neocore2/old/crates/newengine-audio-api/: Cargo.toml
neocore2/old/crates/newengine-audio-api/src/: ambience.rs  audio_api.rs  capability.rs  environment.rs  ids.rs  lib.rs  math.rs  mixer.rs  music.rs  occlusion.rs  protocol.rs  system.rs  types.rs  vehicle.rs  voice.rs  wire.rs
neocore2/old/crates/newengine-camera/: Cargo.toml
neocore2/old/crates/newengine-camera/src/: controller.rs  frustum.rs  lib.rs  projection.rs  rig.rs  state.rs  types.rs
neocore2/old/crates/newengine-core/: Cargo.toml
neocore2/old/crates/newengine-core/src/: assets.rs  assets_service.rs  bus.rs  engine.rs  error.rs  events.rs  frame.rs  host_events.rs  host_services.rs  lib.rs  system_info.rs
neocore2/old/crates/newengine-import-audio/: Cargo.toml
neocore2/old/crates/newengine-import-audio/src/: module.rs  plugin.rs
neocore2/old/crates/newengine-import-image/src/: module.rs  plugin.rs
neocore2/old/crates/newengine-import-text/: build.rs
neocore2/old/crates/newengine-import-text/src/: lib.rs  module.rs  plugin.rs
neocore2/old/crates/newengine-modules-input/: Cargo.toml  build.rs
neocore2/old/crates/newengine-modules-input/src/: module.rs
neocore2/old/crates/newengine-modules-logging/: Cargo.toml
neocore2/old/crates/newengine-modules-logging/src/: lib.rs
neocore2/old/crates/newengine-modules-render-vulkan-ash/: Cargo.toml  build.rs
neocore2/old/crates/newengine-platform-winit/: Cargo.toml
neocore2/old/crates/newengine-plugin-api/: Cargo.toml
neocore2/old/crates/newengine-ui/: Cargo.toml
neocore2/old/crates/newengine-ui/src/: draw.rs  (+4 more)
(+89 files in other folders)
