[workspace]
resolver = "2"
members = [
  "crates/newengine-core",
  "crates/newengine-platform-winit",
  "crates/newengine-modules-logging",
  "crates/newengine-modules-input",
  "crates/newengine-plugin-api",
    "crates/newengine-AssetManager",
  "crates/newengine-import-dds",
  "apps/editor",
]

[profile.release]
debug = 0
strip = "symbols"
panic = "abort"
lto = true
codegen-units = 1

[workspace.package]
edition = "2021"
license = "Proprietary"