[workspace]
resolver = "2"
members = [
  "crates/newengine-core",
  "crates/newengine-platform-winit",
  "crates/newengine-modules-logging",
  "crates/newengine-plugin-api",
  "crates/newengine-AssetManager",
  "crates/newengine-modules-input",
  "crates/newengine-import-image",
  "crates/newengine-import-text",
  "crates/newengine-import-audio",
    "crates/newengine-import-3d",
  "crates/newengine-ui",
  "apps/editor",
]

[profile.release]
debug = 0
strip = "symbols"
panic = "abort"
lto = true
codegen-units = 1

[workspace.package]
edition = "2021"
license = "Proprietary"