[package]
name = "newengine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
log = "0.4.29"
raw-window-handle = "0.6.2"
windows-sys = "0.61.2"
libc = "1.0.0-alpha.2"
abi_stable = "0.11"
newengine-plugin-api = { path = "../newengine-plugin-api" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
parking_lot = "0.12.5"