[package]
name = "newengine-core"
version = "0.1.0"
edition = "2021"

[features]
# The default build provides a "batteries included" runtime facade (assets, console service, render API).
# The kernel/orchestrator-only build is obtained by disabling default features.
default = ["runtime"]

# Runtime facade: asset manager wiring, importer auto-registration, console service.
runtime = ["dep:newengine-assets", "dep:newengine-ui"]

[dependencies]
crossbeam-channel = "0.5"
log = "0.4.29"
raw-window-handle = "0.6.2"
abi_stable = "0.11"
newengine-plugin-api = { path = "../newengine-plugin-api" }

# Optional runtime dependencies. Kernel/orchestrator builds should disable default features.
newengine-assets = { path = "../newengine-AssetManager", optional = true }
newengine-ui = { path = "../newengine-ui", optional = true }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
parking_lot = "0.12.5"
libloading = "0.7.4"