[package]
name = "ddsimporter"
version = "0.1.2"
edition = "2021"
description = "NewEngine DDS importer plugin (DLL)"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11"
newengine-plugin-api = { path = "../newengine-plugin-api" }
ddsfile = "0.5"

[build-dependencies]
embed-resource = "2"