[package]
name = "pngimporter"
version = "0.1.0"
edition = "2021"
description = "NewEngine PNG importer plugin (DLL)"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11"
newengine-plugin-api = { path = "../newengine-plugin-api" }
png = "0.17"

[build-dependencies]
embed-resource = "2"