[package]
name = "textimporter"
version = "0.1.1"
edition = "2021"
description = "NewEngine Text importer plugin (DLL)"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11"
newengine-plugin-api = { path = "../newengine-plugin-api" }

serde_json = "1.0"
quick-xml = "0.36"

[build-dependencies]
embed-resource = "2"