[package]
name = "newengine-modules-cef"
version = "0.1.0"
edition = "2021"

[dependencies]
newengine-core = { path = "../newengine-core" }
raw-window-handle = "0.6"
parking_lot = "0.12"
log = "0.4.29"
ureq = "2.9"

# Real CEF runtime (optional)
cef = { version = "=144.2.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader"
] }

[features]
default = []
cef-runtime = ["dep:cef"]
