[package]
name = "input"
version = "0.1.6"
edition = "2021"
build = "build.rs"
description = "NewEngine input handler"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11"
newengine-plugin-api = { path = "../newengine-plugin-api" }

gilrs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

parking_lot = "0.12"

[build-dependencies]
embed-resource = "2"