[package]
name = "newengine-modules-render-vulkan-ash"
version = "0.1.0"
edition = "2021"

[dependencies]
newengine-core = { path = "../newengine-core" }
newengine-platform-winit = { path = "../newengine-platform-winit" }
newengine-camera = { path = "../../crates/newengine-camera" }
newengine-ui = { path = "../newengine-ui" }
ash = "0.38"
ash-window = "0.13"
raw-window-handle = "0.6"
thiserror = "1.0"
log = "0.4.29"
bytemuck = "1.24.0"

[build-dependencies]
shaderc = "0.8"