[package]
name = "newengine-platform-winit"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
newengine-core = { path = "../newengine-core" }
newengine-ui = { path = "../newengine-ui"}
abi_stable = "0.11"
newengine-plugin-api = { path = "../newengine-plugin-api" }
image = { version = "0.25", default-features = false, features = ["png"] }
egui = { version = "0.29" }
raw-window-handle = "0.6.2"
log = "0.4.29"
serde_json = "1.0.149"