[package]
name = "newengine-camera"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde", "glam/serde"]

[dependencies]
glam = { version = "0.28", default-features = false, features = ["libm"] }
bytemuck = { version = "1.16", features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }